--- a/front-1c/src/assets/base.css
+++ b/front-1c/src/assets/base.css
@@ -1,10 +1,20 @@
-.full-height{ height: 100vh; }
+.full-height{ height: calc(100vh - 70px); }
 
-* {
+*, body, html {
     font-family: "Nunito";
+    overflow-y: hidden;
 }
 /* Text classe */
 .letter-space{
     letter-spacing: 4px;
     text-transform: uppercase;
+}
+
+
+#navbar{
+    height: 70px;
+    background-color: #005db7;
+    color: white;
+    font-family: 'Nunito';
+    font-size: 1.4em;
 }
